--- a/src/components/dashboard/Crud/add students/edit.css
+++ b/src/components/dashboard/Crud/add students/edit.css
@@ -1,10 +1,11 @@
 .editdetails-parent {
   display: flex;
+  min-height: calc(100vh - 70px);
+  overflow-y: hidden;
 }
 
 .editdetails-child {
   width: calc(100% - 7em);
-  min-height: calc(100vh - 70px);
   background-color: #212529;
   border: 2px solid #fff;
   border-radius: 10px;
